dev-auth-server: combine GET/POST for test-auth
